Changed input boxes

--- a/index.html
+++ b/index.html
@@ -101,52 +101,100 @@
               id="swimmer-form-ASA"
             > 
               <div class="swimmer-container" id="swimmer-container-ASA">
-                <div class="swimmer-input">
-                  <label for="Swimmer1">Swimmer 1</label>
-                  <div class="divider"></div>
-                  <input
-                    type="text"
-                    inputmode="numeric"
-                    name="Swimmer1"
-                    id="Swimmer1"
-                    value="1165975"
-                  />
+                <div class="individual-input">
+                  <h2>Swimmer 1</h2>
+                  <div class="form-input">
+                    <label for="asa-number1">ASA Number</label>
+                    <input
+                      type="text"
+                      inputmode="numeric"
+                      name="Swimmer1"
+                      id="asa-number1"
+                      value="1165975"
+                    />
+                  </div>
+                  <div class="form-input">
+                    <label for="name1">Name</label>
+                    <input type="text" id="name1" name = "name1" placeholder="Enter Full Name">
+                  </div>
+                  <div class="form-input">
+                    <label for="club1">Club</label>
+                    <select name="club1" id="club1">
+                      <option value="" disabled selected>Select club</option>
+                    </select>
+                  </div>
                 </div>
 
-                <div class="swimmer-input">
-                  <label for="Swimmer2">Swimmer 2</label>
-                  <div class="divider"></div>
-                  <input
-                    type="text"
-                    inputmode="numeric"
-                    name="Swimmer2"
-                    id="Swimmer2"
-                    value="1165969"
-                  />
+                <div class="individual-input">
+                  <h2>Swimmer 2</h2>
+                  <div class="form-input">
+                    <label for="asa-number1">ASA Number</label>
+                    <input
+                      type="text"
+                      inputmode="numeric"
+                      name="Swimmer1"
+                      id="asa-number1"
+                      value="1165975"
+                    />
+                  </div>
+                  <div class="form-input">
+                    <label for="name1">Name</label>
+                    <input type="text" id="name1" name = "name1" placeholder="Enter Full Name">
+                  </div>
+                  <div class="form-input">
+                    <label for="club1">Club</label>
+                    <select name="club1" id="club1">
+                      <option value="" disabled selected>Select club</option>
+                    </select>
+                  </div>
                 </div>
 
-                <div class="swimmer-input">
-                  <label for="Swimmer3">Swimmer 3</label>
-                  <div class="divider"></div>
-                  <input
-                    type="text"
-                    inputmode="numeric"
-                    name="Swimmer3"
-                    id="Swimmer3"
-                    value="1160036"
-                  />
+                <div class="individual-input">
+                  <h2>Swimmer 3</h2>
+                  <div class="form-input">
+                    <label for="asa-number1">ASA Number</label>
+                    <input
+                      type="text"
+                      inputmode="numeric"
+                      name="Swimmer1"
+                      id="asa-number1"
+                      value="1165975"
+                    />
+                  </div>
+                  <div class="form-input">
+                    <label for="name1">Name</label>
+                    <input type="text" id="name1" name = "name1" placeholder="Enter Full Name">
+                  </div>
+                  <div class="form-input">
+                    <label for="club1">Club</label>
+                    <select name="club1" id="club1">
+                      <option value="" disabled selected>Select club</option>
+                    </select>
+                  </div>
                 </div>
 
-                <div class="swimmer-input">
-                  <label for="Swimmer4">Swimmer 4</label>
-                  <div class="divider"></div>
-                  <input
-                    type="text"
-                    inputmode="numeric"
-                    name="Swimmer4"
-                    id="Swimmer4"
-                    value="1585893"
-                  />
+                <div class="individual-input">
+                  <h2>Swimmer 4</h2>
+                  <div class="form-input">
+                    <label for="asa-number1">ASA Number</label>
+                    <input
+                      type="text"
+                      inputmode="numeric"
+                      name="Swimmer1"
+                      id="asa-number1"
+                      value="1165975"
+                    />
+                  </div>
+                  <div class="form-input">
+                    <label for="name1">Name</label>
+                    <input type="text" id="name1" name = "name1" placeholder="Enter Full Name">
+                  </div>
+                  <div class="form-input">
+                    <label for="club1">Club</label>
+                    <select name="club1" id="club1">
+                      <option value="" disabled selected>Select club</option>
+                    </select>
+                  </div>
                 </div>
               </div>
               <button type="button" class="btn btn-grey addSwimmerButton" id="addSwimmerButton-asa" data-target-container="swimmer-container-ASA">
@@ -175,7 +223,7 @@
               class="form-container"
               id="swimmer-form-swimcloud"
             >
-              <div class="swimmer-container" id="swimmer-container-swimcloud">
+              <div class="swimmer-container_sc" id="swimmer-container-swimcloud">
                 <div class="swimmer-input">
                   <label for="Swimmer1">Swimmer 1</label>
                   <div class="divider"></div>
