--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
           </div>
           <div id= "ASA" class="tabcontent" style="display: block;">
             <p>Insert the ASA numbers for each swimmer into the boxes below</p>
+            <div id="filter-bar">
+              <input type="text" id="filter-club" placeholder="Club name">
+              <div id="autocomplete-club"></div>
+              <select id="filter-gender">
+                <option value="">All</option>
+                <option value="Open/Male">Open/Male</option>
+                <option value="Female">Female</option>
+              </select>
+              <input type="number" id ="filter-age-min" placeholder="Min age">
+              <input type="number" id ="filter-age-max" placeholder="Max age">
+              <button id="apply-filters">Apply</button>
+            </div>
             <form
               action="/submit"
               method="post"
