Added option for mixed relays

--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
                 <input type="radio" name="pool-length" class="100" id="100-asa" value="100">
                 <label class="radio-label" for="100-asa">4 &#215; 100m</label>
               </div>
+              <div class="radio-wrapper" id="gender">
+                <input type="radio" name="gender" class="Mixed" id="Mixed-asa" value="Mixed">
+                <label class="radio-label" for="Mixed-asa">Mixed</label>
+                <input type="radio" name="gender" class="Male" id="Male-asa" value="Open/Male">
+                <label class="radio-label" for="Male-asa">Open/Male</label>
+                <input type="radio" name="gender" class="Female" id="female-asa" value="Female">
+                <label class="radio-label" for="female-asa">Female</label>
+              </div>
               <button class="btn" type="submit">Submit</button>
             </form>
           </div>
