Added option to filter each swimmer by club

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           <div id= "ASA" class="tabcontent" style="display: block;">
             <p>Insert the ASA numbers for each swimmer into the boxes below</p>
             <div class = "filter-bar" id="filter-bar">
-              <div class="club-input-wrapper">
+              <div class="club-input-wrapper" id="club-input-wrapper0">
                 <input type="text" id="filter-club" placeholder="Enter Club Name..."/>
-                <div id="autocomplete-club"></div>
+                <div class="autocomplete-club" id="autocomplete-club0"></div>
               </div>            
               <div class="filter-row">
                 <select id="filter-gender" placeholder>
