added some user input error handling

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <label class="radio-label" for="female-asa">Female</label>
               </div>
               <button class="btn" type="submit">Submit</button>
+              <div id="team-warning" class="team-warning hidden" aria-live="polite"></div>
             </form>
           </div>
           <div id="swimcloud" class="tabcontent">
