Added a clear swimmers button

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                   </div>
                 </div> -->
               </div>
+              <button type="button" class = "btn btn-grey clearSwimmerButton" id="clearSwimmerButton-asa" data-target-container="swimmer-container-ASA">
+                Clear all swimmers
+              </button>
               <button type="button" class="btn btn-grey addSwimmerButton" id="addSwimmerButton-asa" data-target-container="swimmer-container-ASA">
                 Add +
               </button>
