--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
     </section>
     <section id="results">
       <div id="spinner" class="spinner"></div>
-      <div class="table-container">
+      <div class="table-rows" id=""table-rows">
+        <div id="table-row-top" class = "table-row"></div>
+        <div id="table-row-mid" class = "table-row"></div>
+        <div id="table-row-bottom" class = "table-row"></div>
+    </div>>
       
     </section>
     <script src="js/main.js"></script>
