Improved styling for tables

--- a/index.html
+++ b/index.html
@@ -280,8 +280,11 @@
     <section id="results">
       <div id="spinner" class="spinner"></div>
       <div class="table-rows" id="table-rows">
-        <div id="table-row-top" class = "table-row"></div>
-        <div id="table-row-mid" class = "table-row"></div>
+        <div id="table-row-top" class = "table-row">
+        </div>
+        <div id="table-row-mid" class = "table-row">
+          <div class="mid-tables-wrapper" id="mid-tables-wrapper"></div>
+        </div>
         <div id="table-row-bottom" class = "table-row"></div>
     </div>>
       
