--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relay Tool</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,14 +18,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" / >
+    <link rel="shortcut icon" href="static/images/icon.ico" type="static/image/x-icon" / >
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="logo">
           <a href="index.html" id ="logo">
-            <img src="images/icon.jpg"  alt="logo" width="50px" height="50px" />
+            <img src="static/images/icon.jpg"  alt="logo" width="50px" height="50px" />
           <h1 class="main-title">Medley Master</h1></a>
           
         </div>
@@ -51,7 +51,7 @@
     <section class="hero">
       <div class="container">
         <img
-          src="../images/relay-takeover-new.jpg"
+          src="../static/images/relay-takeover-new.jpg"
           alt="Image of a relay takeover"
         />
       </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="box about_box2">
           <img
-            src="../images/starting-block.jpg"
+            src="../static/images/starting-block.jpg"
             alt="Image of Starting Block"
           />
         </div>
@@ -292,6 +292,6 @@
     </div>>
       
     </section>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="static/js/main.js"></script>
   </body>
 </html>
